--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 #emoji-char {
-  padding-top: 15vh;
+  padding-top: 10vh;
   text-align: center;
   font-size: 15vh;
   padding-bottom: 1vh;
@@ -21,7 +21,6 @@
 }
 
 #random-emoji-button {
-  position: fixed;
   bottom: 0vh;
   width: 100%;
   height: 30vh;
@@ -32,4 +31,14 @@
 }
 button:focus {
   outline:0;
+}
+
+#history-title {
+  padding: 40px 5px 5px 5px; 
+  font-size: 3vh;
+  border-bottom: 1px solid rgb(196, 192, 192);
+}
+
+#history {
+  padding: 10px 5px 5px 5px;
 }
